[gd_scene load_steps=2 format=3 uid="uid://tavern_2048"]

[ext_resource type="Script" path="res://src/ui/puzzle/tavern_2048.gd" id="1_script"]

[node name="Tavern2048" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.25, 0.18, 0.12, 0.98)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 24.0
offset_right = -32.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.88, 0.65, 1)
theme_override_font_sizes/font_size = 28
text = "선술집 2048"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24

[node name="GridContainer" type="Control" parent="VBox/HBox"]
custom_minimum_size = Vector2(320, 320)
layout_mode = 2

[node name="InfoVBox" type="VBoxContainer" parent="VBox/HBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ScoreLabel" type="Label" parent="VBox/HBox/InfoVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.88, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = "점수: 0"

[node name="BestLabel" type="Label" parent="VBox/HBox/InfoVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.9, 0.95, 1)
theme_override_font_sizes/font_size = 18
text = "최고: 0"

[node name="HintLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.65, 0.55, 1)
theme_override_font_sizes/font_size = 14
text = "방향키로 타일을 움직이세요"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="StartButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "시작"

[node name="BackButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "돌아가기"

[node name="RestartButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "다시 하기"

[node name="HelpButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "게임 방법"

[node name="HelpPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -120.0
offset_right = 180.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="HelpPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="HelpPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HelpTitle" type="Label" parent="HelpPanel/Margin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.88, 0.65, 1)
theme_override_font_sizes/font_size = 20
text = "게임 방법"
horizontal_alignment = 1

[node name="HelpLabel" type="Label" parent="HelpPanel/Margin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.88, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "방향키로 타일을 움직이세요..."
autowrap_mode = 3

[node name="CloseBtn" type="Button" parent="HelpPanel/Margin/VBox"]
layout_mode = 2
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "닫기"

[node name="GameOverPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -60.0
offset_right = 160.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="GameOverPanel"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="GameOverPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="GameOverLabel" type="Label" parent="GameOverPanel/Margin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.7, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "게임 오버!"
horizontal_alignment = 1

[node name="RestartBtn" type="Button" parent="GameOverPanel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "다시 하기"

[node name="WinPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -80.0
offset_right = 160.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="WinPanel"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="WinPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="WinLabel" type="Label" parent="WinPanel/Margin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 24
text = "2048 도달!"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="WinPanel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "계속하기"
